themes/knives-forks-theme/style.css
/* ... */
  @media all and (max-width: 499px) and (max-width: 499px) {
    .page-how-it-works article .entry-header {
      width: 100%;
      padding: 0 5% 10% 5%;
      margin: 0 auto; }
      .page-how-it-works article .entry-header p {
        font-size: 1rem; } }

@media all and (max-width: 499px) {
    .page-how-it-works article .banner .banner-img {
      width: 100%;
      height: 100vmax;
      position: relative; }
    .page-how-it-works article .banner-image img {
      -o-object-fit: cover;
         object-fit: cover;
      height: 100%;
      width: 100%;
      position: absolute; }
    .page-how-it-works article .banner .banner-content {
      width: 80%; }
      .page-how-it-works article .banner .banner-content h2 {
        font-size: 1.25rem; }
    .page-how-it-works article .how-count {
      font-size: 4rem;
      margin: 0; }
    .page-how-it-works article .site-main {
      padding: 0; }
    .page-how-it-works article article {
      line-height: 1.5; }
      .page-how-it-works article article .how-icons {
        display: block;
        width: 80%;
        height: auto;
        margin: 5% auto; }
      .page-how-it-works article article ul {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
            -ms-flex-flow: column nowrap;
                flex-flow: column nowrap;
        -webkit-box-align: center;
            -ms-flex-align: center;
                align-items: center;
        -ms-flex-line-pack: center;
            align-content: center;
        padding-bottom: 66%; }
        .page-how-it-works article article ul li .how-btn {
          display: block;
          width: 70%;
          margin: 10% auto;
          padding: 0.9rem 0;
          text-align: center;
          text-transform: uppercase;
          font-size: 0.8rem;
          word-spacing: 0.3em;
          font-weight: 400;
          background: #00883f; }
  .page-how-it-works .knives-fork {
    display: none; }
  .page-how-it-works .profile-pic {
    height: 9em;
    width: 9em;
    position: relative;
    -webkit-transform: translateY(-40%);
            transform: translateY(-40%); }
  .page-how-it-works p {
    -webkit-transform: translateY(-10%);
            transform: translateY(-10%);
    font-size: 1.5rem; }
  .page-how-it-works .member-name {
    font-size: 1.2rem;
    text-align: right; }
  .page-how-it-works .member-since {
    font-size: 1.2rem;
    text-align: right;
    -webkit-transform: translateY(-80%);
            transform: translateY(-80%); } }

.page-how-it-works .btn-container {
  margin: 0 auto;
  width: 70%;
  min-width: 200px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  text-align: center; }
  @media screen and (min-width: 500px) and (max-width: 999px) {
    .page-how-it-works .btn-container {
      width: 50%; } }
  @media all and (min-width: 1000px) {
    .page-how-it-works .btn-container {
      -webkit-box-orient: horizontal;
      -webkit-box-direction: normal;
          -ms-flex-direction: row;
              flex-direction: row;
      width: 70%;
      margin-left: 0; } }
  .page-how-it-works .btn-container .how-btn {
    margin: 1rem 0;
    z-index: 10; }
    @media screen and (min-width: 500px) and (max-width: 999px) {
      .page-how-it-works .btn-container .how-btn {
        z-index: 10; } }
    @media all and (min-width: 1000px) {
      .page-how-it-works .btn-container .how-btn {
        width: 230px;
        margin: 1rem;
        margin-left: 0; } }

.page-how-it-works .entry-header .works-img {
  display: none; }

@media screen and (min-width: 500px) and (max-width: 999px) {
  .page-how-it-works .entry-header {
    padding: 0 10%; } }

@media all and (min-width: 1000px) {
  .page-how-it-works .entry-header {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex; }
    .page-how-it-works .entry-header .works-img {
      display: block;
      width: 35%;
      height: 100%;
      position: relative;
      top: 70px; } }

@media screen and (min-width: 500px) and (max-width: 999px) {
  .page-how-it-works .article-content {
    padding: 0; }
    .page-how-it-works .article-content .steps-list {
      display: -webkit-box;
      display: -ms-flexbox;
      display: flex;
      width: 100%;
      -webkit-box-orient: horizontal;
      -webkit-box-direction: normal;
          -ms-flex-direction: row;
              flex-direction: row;
      -ms-flex-wrap: wrap;
          flex-wrap: wrap; }
      .page-how-it-works .article-content .steps-list li {
        width: 40%;
        margin: 0 2.5%; }
      .page-how-it-works .article-content .steps-list .li1 .how-description {
        margin-top: 2.1rem; }
    .page-how-it-works .article-content .how-count {
      font-size: 3rem;
      margin-bottom: 0;
      color: #f2804a; }
    .page-how-it-works .article-content .how-title {
      margin-top: 0; }
    .page-how-it-works .article-content .how-img {
      width: 100%;
      margin-top: 0;
      z-index: -10;
      -webkit-transform: translateY(-100px);
              transform: translateY(-100px); } }
    @media screen and (min-width: 500px) and (max-width: 999px) and (min-width: 500px) and (max-width: 999px) {
      .page-how-it-works .article-content .how-img {
        -webkit-transform: translateY(-100px);
                transform: translateY(-100px); } }
/* ... */

